<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="text_title">My Nanodegree Apps!</string>
    <string name="text_button1">SPOTIFY STREAMER</string>
    <string name="text_button2">SCORES APP</string>
    <string name="text_button3">LIBRARY APP</string>
    <string name="text_button4">BUILD IT BIGGER</string>
    <string name="text_button5">XYZ READER</string>
    <string name="text_button6">CAPSTONE:MY OWN APP</string>

    <string-array name="names_of_myapps">
        <item>spotify streamer app</item>
        <item>football scores app</item>
        <item>library app</item>
        <item>build it bigger app</item>
        <item>XYZ reader app</item>
        <item>my capstone app</item>
    </string-array>

</resources>
