<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:measureWithLargestChild="true"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button1"
            android:id="@+id/button1"
            android:onClick="onClick"
            android:background="@color/orange500"
            android:layout_gravity="center_horizontal"
            android:clickable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button2"
            android:id="@+id/button2"
            android:onClick="onClick"
            android:background="@color/orange500"
            android:layout_gravity="center_horizontal"
            android:clickable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button3"
            android:id="@+id/button3"
            android:onClick="onClick"
            android:background="@color/orange500"
            android:layout_gravity="center_horizontal"
            android:clickable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button4"
            android:id="@+id/button4"
            android:onClick="onClick"
            android:background="@color/orange500"
            android:layout_gravity="center_horizontal"
            android:clickable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button5"
            android:id="@+id/button5"
            android:onClick="onClick"
            android:background="@color/orange500"
            android:layout_gravity="center_horizontal"
            android:clickable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_vertical_margin"
            android:text="@string/text_button6"
            android:id="@+id/button6"
            android:onClick="onClick"
            android:background="@color/red800"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:clickable="true"/>
        </LinearLayout>
</LinearLayout>
